Fix text overflowing navigation

--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -68,6 +68,7 @@
   height: 100dvh;
   align-items: center;
   padding-right: 1.25em;
+  z-index: -5;
 }
 
 @media only screen and (min-width: 600px) {
